# c0mpute

./: .dockerignore  .env.example  .gitignore  .mise.toml  Cargo.toml  Dockerfile.status-aggregator  Dockerfile.web  README.md  drizzle.config.ts  drizzle.studio.config.ts  package.json
.github/workflows/: codeql.yml  release.yml  security.yml
apps/cli/: package.json  tsconfig.json
apps/cli/src/: cli.ts
apps/coordinator/: .env.example  package.json  tsconfig.json
apps/coordinator/src/: server.ts
apps/coordinator/src/lib/: coinpayments.ts  supabase.ts
apps/coordinator/src/routes/: billing.ts  earnings.ts  jobs.ts  network.ts  providers.ts  releases.ts  videos.ts  webhooks.ts
apps/tui/: package.json
apps/web/: .env.local.example  next.config.mjs  next.config.ts  package.json  tsconfig.json
apps/web/public/: llms.txt  manifest.json
apps/web/public/.well-known/: security.txt
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/app/about/: page.tsx
apps/web/src/app/api/crawlproof/autoblog/webhook/: route.ts
apps/web/src/app/api/partners/example/: route.ts
apps/web/src/app/api/plugins/: route.ts
apps/web/src/app/api/status/: route.ts
apps/web/src/app/api/status/stream/: route.ts
apps/web/src/app/blog/: page.tsx
apps/web/src/app/blog/[slug]/: page.tsx
apps/web/src/app/blog/rss.xml/: route.ts
apps/web/src/app/bootstrap.json/: route.ts
apps/web/src/app/contact/: page.tsx
apps/web/src/app/docs/: page.tsx
apps/web/src/app/embed/[videoId]/: embed.css  page.tsx
apps/web/src/app/getting-started/: page.tsx
apps/web/src/app/install/: page.tsx
apps/web/src/app/install.sh/: route.ts
apps/web/src/app/plugins/: page.tsx
apps/web/src/app/pricing/: page.tsx
apps/web/src/app/releases/latest.json/: route.ts
apps/web/src/app/status/: error.tsx  loading.tsx  page.tsx
apps/web/src/app/terms/: page.tsx
apps/web/src/app/zero-token/: page.tsx
apps/web/src/components/: CodeBlock.tsx  dashboard-shell.tsx  live-badge.tsx  overview-grid.tsx  resource-table.tsx  webmcp-provider.tsx
apps/web/src/lib/: blog-db.ts  plugins.ts  schema.ts  status.ts
apps/web/src/lib/supabase/: middleware.ts  server.ts
apps/web/src/types/: webmcp.d.ts
dips/: 0001-url-namespace.md  0002-cli-structure.md  0003-nostr-signed-request-auth.md  0004-toolchain-mise.md  0005-c0mpute-rebrand.md  0006-module-model.md  0008-ui-strategy.md  0009-mojo-for-kernels.md  0010-bootstrap-seed-nodes.md  0011-no-central-backend.md  0012-storage-plugin.md  0014-status-aggregator.md  0015-hosting-vertical.md  0017-streaming-reads.md  0018-secure-chat-plugin.md  0019-live-stream-plugin.md  0020-ctv-ads-plugin.md  0021-ads-manager-plugin.md  0022-podcast-plugins.md  0023-podcast-ads-plugin.md  README.md
dips/v2.x/: 0016-abuse-policy.md
docs/: PRD.md  storage-pricing-scenarios.md  storage-pricing.csv
drizzle/: 0000_demonic_lethal_legion.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
node/: Cargo.toml
node/crates/c0mpute-api/: Cargo.toml
node/crates/c0mpute-api/src/: lib.rs
node/crates/c0mpute-cli/: Cargo.toml
node/crates/c0mpute-cli/src/: main.rs
node/crates/c0mpute-core/: Cargo.toml
node/crates/c0mpute-core/src/: buyer.rs  capabilities.rs  config.rs  dispatch.rs  lib.rs  register.rs  runner.rs  status_aggregator.rs  supervisor.rs
node/crates/c0mpute-doctor/: Cargo.toml
node/crates/c0mpute-doctor/src/: lib.rs
node/crates/c0mpute-gateway/: Cargo.toml
node/crates/c0mpute-gateway/src/: lib.rs
node/crates/c0mpute-net/: Cargo.toml
node/crates/c0mpute-net/src/: lib.rs  topics.rs
node/crates/c0mpute-proto/: Cargo.toml
node/crates/c0mpute-proto/src/: lib.rs
node/crates/c0mpute-secure-chat/: Cargo.toml
node/crates/c0mpute-secure-chat/src/: keys.rs  lib.rs  message.rs
node/crates/c0mpute-store/: Cargo.toml
node/crates/c0mpute-store/src/: lib.rs
node/crates/c0mpute-transcode/: Cargo.toml
node/crates/c0mpute-transcode/src/: lib.rs
node/crates/c0mpute-update/: Cargo.toml
node/crates/c0mpute-update/src/: lib.rs
node/crates/c0mpute-verify/: Cargo.toml
node/crates/c0mpute-verify/src/: lib.rs
node/crates/quest-api/: Cargo.toml
node/crates/quest-api/src/: lib.rs
node/crates/quest-cli/: Cargo.toml
node/crates/quest-cli/src/: main.rs
node/crates/quest-core/: Cargo.toml
node/crates/quest-core/src/: config.rs  lib.rs  supervisor.rs
node/crates/quest-doctor/: Cargo.toml
node/crates/quest-doctor/src/: lib.rs
node/crates/quest-gateway/: Cargo.toml
node/crates/quest-gateway/src/: lib.rs
node/crates/quest-net/: Cargo.toml
node/crates/quest-net/src/: lib.rs
node/crates/quest-proto/: Cargo.toml
node/crates/quest-store/: Cargo.toml
node/crates/quest-store/src/: lib.rs
node/crates/quest-transcode/: Cargo.toml
node/crates/quest-transcode/src/: lib.rs
node/crates/quest-update/: Cargo.toml
node/crates/quest-verify/: Cargo.toml
node/crates/quest-verify/src/: lib.rs
plugins/ads-manager/: module.toml
plugins/coinpay/: install.sh  module.toml
plugins/crawl/: module.toml
plugins/ctv-ads/: module.toml
plugins/diffusion/: module.toml
plugins/embed/: module.toml
plugins/gameserver/: module.toml
plugins/hosting/: module.toml
plugins/infernet/: install.sh  module.toml
plugins/live-stream/: module.toml
plugins/ocr/: module.toml
plugins/podcast-ads/: module.toml
plugins/podcasting/: module.toml
plugins/podcasts/: module.toml
plugins/render/: module.toml
plugins/secure-chat/: module.toml
plugins/storage/: module.toml
plugins/train/: module.toml
plugins/transcode/: module.toml
plugins/tts/: module.toml
plugins/whisper/: module.toml
scripts/: bump-version.sh  install.sh  railway-web-start.sh
scripts/systemd/: c0mpute-worker.service
supabase/migrations/: 0001_init.sql
