[workspace]
resolver = "3"
members = [
    # Host (c0mpute umbrella binary + supporting crates).
    # The `plugins/` directory holds only marketplace wrappers
    # (module.toml + web stubs); plugin source lives in upstream repos.
    "node/crates/c0mpute-cli",          # produces `c0mpute`
    "node/crates/c0mpute-core",
    "node/crates/c0mpute-net",
    "node/crates/c0mpute-store",
    "node/crates/c0mpute-gateway",
    "node/crates/c0mpute-verify",
    "node/crates/c0mpute-update",
    "node/crates/c0mpute-doctor",
    "node/crates/c0mpute-proto",
    "node/crates/c0mpute-api",
    "node/crates/c0mpute-transcode",    # in-process transcode workload (FFmpeg)
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/profullstack/c0mpute"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
blake3 = "1"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-br", "fs"] }
bytes = "1"
futures = "0.3"
async-trait = "0.1"
url = "2"
directories = "5"
sysinfo = "0.32"

c0mpute-proto = { path = "node/crates/c0mpute-proto" }
c0mpute-store = { path = "node/crates/c0mpute-store" }
c0mpute-net = { path = "node/crates/c0mpute-net" }
c0mpute-gateway = { path = "node/crates/c0mpute-gateway" }
c0mpute-verify = { path = "node/crates/c0mpute-verify" }
c0mpute-update = { path = "node/crates/c0mpute-update" }
c0mpute-doctor = { path = "node/crates/c0mpute-doctor" }
c0mpute-api = { path = "node/crates/c0mpute-api" }
c0mpute-core = { path = "node/crates/c0mpute-core" }
c0mpute-transcode = { path = "node/crates/c0mpute-transcode" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
