[workspace]
resolver = "3"
members = [
    # Host (c0mpute umbrella binary + supporting crates).
    # The `plugins/` directory holds only marketplace wrappers
    # (module.toml + web stubs); plugin source lives in upstream repos.
    "node/crates/c0mpute-cli",          # produces `c0mpute`
    "node/crates/c0mpute-core",
    "node/crates/c0mpute-net",
    "node/crates/c0mpute-store",
    "node/crates/c0mpute-gateway",
    "node/crates/c0mpute-verify",
    "node/crates/c0mpute-update",
    "node/crates/c0mpute-doctor",
    "node/crates/c0mpute-proto",
    "node/crates/c0mpute-api",
    "node/crates/c0mpute-transcode",    # in-process transcode workload (FFmpeg)
    "node/crates/c0mpute-secure-chat",  # in-process E2E encrypted p2p messaging (DIP-0018)
]

[workspace.package]
version = "0.2.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/profullstack/c0mpute"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
blake3 = "1"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-br", "fs"] }
bytes = "1"
futures = "0.3"
async-trait = "0.1"
url = "2"
directories = "5"
sysinfo = "0.32"
reed-solomon-erasure = "6"
libp2p = { version = "0.56", features = ["tcp", "noise", "yamux", "kad", "identify", "ping", "request-response", "macros", "tokio", "ed25519", "cbor", "gossipsub", "mdns"] }
tempfile = "3"
# secure-chat crypto stack (DIP-0018) — hybrid classical + post-quantum
argon2 = "0.5"
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = "2"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
rpassword = "7"

c0mpute-proto = { path = "node/crates/c0mpute-proto" }
c0mpute-store = { path = "node/crates/c0mpute-store" }
c0mpute-net = { path = "node/crates/c0mpute-net" }
c0mpute-gateway = { path = "node/crates/c0mpute-gateway" }
c0mpute-verify = { path = "node/crates/c0mpute-verify" }
c0mpute-update = { path = "node/crates/c0mpute-update" }
c0mpute-doctor = { path = "node/crates/c0mpute-doctor" }
c0mpute-api = { path = "node/crates/c0mpute-api" }
c0mpute-core = { path = "node/crates/c0mpute-core" }
c0mpute-transcode = { path = "node/crates/c0mpute-transcode" }
c0mpute-secure-chat = { path = "node/crates/c0mpute-secure-chat" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
