[package]
name = "c0mpute-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Coordinator API client used by c0mpute nodes."

[dependencies]
c0mpute-proto = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
