[package]
name = "c0mpute-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Quest node CLI binary."

[[bin]]
name = "c0mpute"
path = "src/main.rs"

[dependencies]
c0mpute-core = { workspace = true }
c0mpute-doctor = { workspace = true }
c0mpute-proto = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
