[package]
name = "c0mpute-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "c0mpute node CLI binary."

[[bin]]
name = "c0mpute"
path = "src/main.rs"

[dependencies]
c0mpute-core = { workspace = true }
c0mpute-doctor = { workspace = true }
c0mpute-proto = { workspace = true }
c0mpute-update = { workspace = true }
c0mpute-secure-chat = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rpassword = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
dialoguer = "0.11"
