[package]
name = "c0mpute-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Quest node core: config loading, role dispatch, supervisor."

[dependencies]
c0mpute-proto = { workspace = true }
c0mpute-store = { workspace = true }
c0mpute-net = { workspace = true }
c0mpute-transcode = { workspace = true }
c0mpute-gateway = { workspace = true }
c0mpute-verify = { workspace = true }
c0mpute-update = { workspace = true }
c0mpute-doctor = { workspace = true }
c0mpute-api = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
