[package]
name = "c0mpute-doctor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Self-diagnostics and self-heal for the c0mpute node."

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
