[package]
name = "c0mpute-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP gateway role: serves HLS + raw chunks to viewers."

[dependencies]
c0mpute-proto = { workspace = true }
c0mpute-store = { workspace = true }
c0mpute-net = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
