[package]
name = "c0mpute-net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "libp2p networking for c0mpute: Kad-DHT, gossipsub, chunk transport."

[dependencies]
c0mpute-proto = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
# libp2p is added once we wire up the real network stack — kept out of the
# initial dep tree so `cargo check` is fast during scaffold work.
