[package]
name = "c0mpute-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared protocol types for the Quest network."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
