[package]
name = "c0mpute-secure-chat"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "E2E encrypted p2p messaging for c0mpute (DIP-0018)."

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
# crypto stack — hybrid classical + post-quantum (NIST FIPS 203/204)
argon2 = { workspace = true }
aes-gcm = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
# ML-KEM-768 (NIST FIPS 203) — getrandom feature for no-RNG-arg encapsulate()
ml-kem = { version = "0.3.2", features = ["getrandom"] }
# ML-DSA-65 (NIST FIPS 204)
ml-dsa = "0.1.0"
