[package]
name = "c0mpute-transcode"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FFmpeg-based transcode worker for Quest."

[dependencies]
c0mpute-proto = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
