[package]
name = "c0mpute-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verification challenges and reputation scoring for c0mpute."

[dependencies]
c0mpute-proto = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
