[package]
name = "quest-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Quest node CLI binary."

[[bin]]
name = "depin"
path = "src/main.rs"

[dependencies]
quest-core = { workspace = true }
quest-doctor = { workspace = true }
quest-proto = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
