[package]
name = "quest-transcode"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FFmpeg-based transcode worker for Quest."

[dependencies]
quest-proto = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
